changed jdbc connection to mariadb

--- a/lemon-demo-jpa/src/main/resources/config/application-dev.yml
+++ b/lemon-demo-jpa/src/main/resources/config/application-dev.yml
@@ -8,9 +8,14 @@ spring:
     properties:
       hibernate.jdbc.lob.non_contextual_creation: true
   datasource:
-    url: jdbc:postgresql://localhost:5432/lemondb
-    username: lemon
-    password: lemon
+    url: jdbc:mariadb://localhost:3306/lemondb?autoReconnect=true&useSSL=false #jdbc:postgresql://localhost:5432/lemondb
+    username: lemonadmin
+    password: P@ssw0rd
+#    hikari:
+#      jdbc-url: jdbc:mariadb://localhost:3306/lemondb?autoReconnect=true&useSSL=false
+#      driver-class-name: org.mariadb.jdbc.Driver
+#      username: lemonadmin
+#      password: P@ssw0rd
   security:
     oauth2:
       client:
