--- a/lemon-demo-jpa/pom.xml
+++ b/lemon-demo-jpa/pom.xml
@@ -37,6 +37,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>com.naturalprogrammer.spring-lemon</groupId>
 			<artifactId>spring-lemon-jpa</artifactId>
 			<version>${project.version}</version>
